fix: Vertically align toast close button

--- a/src/scss/restaurant-details.scss
+++ b/src/scss/restaurant-details.scss
@@ -581,6 +581,7 @@ input[type="text"].has-error, input[type="range"].has-error, textarea.has-error 
   outline: 0;
   padding: 5px;
   margin-left: 5px;
+	margin-top: 3px;
   font-size: 14px;
   width: 20px;
   cursor: pointer;
