--- a/src/scss/restaurants-list.scss
+++ b/src/scss/restaurants-list.scss
@@ -414,6 +414,7 @@ nav {
   outline: 0;
   padding: 5px;
   margin-left: 5px;
+	margin-top: 3px;
   font-size: 14px;
   width: 20px;
   cursor: pointer;
